--- a/system/index.html
+++ b/system/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width">
     <title>$title$</title>
     $style$
+    $styles$
+    $scripts$
   </head>
   <body>
     <script src="./script/index.js" type="module"></script>
