Adding defer to scripts

--- a/system/index.html
+++ b/system/index.html
@@ -9,6 +9,6 @@
     $scripts$
   </head>
   <body>
-    <script src="./script/index.js" type="module"></script>
+    <script defer src="./script/index.js" type="module"></script>
   </body>
 </html>
